# ai-review

./: .dockerignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: reusable-docker.yml  reusable-review-marketplace.yml  reusable-test.yml
ai_review/clients/azure_devops/pr/schema/: files.py
ai_review/clients/gitlab/mr/: client.py
ai_review/prompts/: default_context.md  default_inline.md  default_inline_reply.md  default_summary.md  default_summary_reply.md  default_system_agent.md  default_system_context.md  default_system_inline.md  default_system_inline_reply.md  default_system_summary.md  default_system_summary_reply.md
ai_review/services/git/: service.py
ai_review/services/vcs/azure_devops/: client.py
ai_review/services/vcs/gitlab/: client.py
ai_review/tests/fixtures/clients/: azure_devops.py  gitlab.py
ai_review/tests/suites/services/vcs/azure_devops/: test_client.py
ai_review/tests/suites/services/vcs/gitlab/: test_client.py
docs/: README.md
docs/ci/: Jenkinsfile  README.md  azure-devops.yaml  bitbucket.yaml  github.yaml  gitlab.yaml
docs/cli/: README.md
docs/prompts/go/inline_reply/: light.md  strict.md
docs/prompts/go/summary/: light.md  strict.md
docs/prompts/go/summary_reply/: light.md  strict.md
docs/prompts/python/inline_reply/: light.md  strict.md
docs/prompts/python/summary/: light.md  strict.md
docs/prompts/python/summary_reply/: light.md  strict.md
docs/troubleshooting/: README.md
