[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-review"
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.64.0"
license = { file = "LICENSE" }
authors = [
    { name = "Nikita Filonov", email = "nikita.filonov@gmail.com" }
]
keywords = [
    "ai",
    "code review",
    "llm",
    "openai",
    "claude",
    "gemini",
    "ollama",
    "bedrock",
    "openrouter",
    "ci/cd",
    "gitlab",
    "github",
    "gitea",
    "bitbucket",
    "bitbucket cloud",
    "bitbucket server",
    "azure",
    "azure devops",
    "azure openai"
]
maintainers = [
    { name = "Nikita Filonov", email = "nikita.filonov@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
description = "AI-powered code review tool for GitHub, GitLab, Bitbucket Cloud, Bitbucket Server, Azure DevOps and Gitea — built with LLMs like OpenAI, Claude, Gemini, Ollama, Bedrock, OpenRouter and Azure OpenAI"
dependencies = [
    "typer",
    "httpx",
    "pyyaml",
    "loguru",
    "aiofiles",
    "pydantic",
    "pydantic-settings"
]
requires-python = ">=3.11"

[project.urls]
Issues = "https://github.com/Nikita-Filonov/ai-review/issues"
Homepage = "https://github.com/Nikita-Filonov/ai-review"
Repository = "https://github.com/Nikita-Filonov/ai-review"

[project.scripts]
ai-review = "ai_review.cli.main:app"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_review*"]

[tool.setuptools.package-data]
"ai_review.prompts" = ["*.md"]
"ai_review.resources" = ["*.yaml"]
